# IRR4_SLAM

./: README.md
old/chase_object/: CMakeLists.txt  package.xml
old/chase_object/src/: chase_object_pubsub.cpp  test_publisher.cpp
old/find_object_py/: package.xml  setup.cfg  setup.py
old/find_object_py/find_object_py/: find_object.py  find_orange_ball.py
old/find_object_py/launch/: follow_object.py
old/get_object_range/: CMakeLists.txt  package.xml
old/get_object_range/src/: location_finder.cpp
src/control/: CMakeLists.txt  package.xml
src/control/src/: get_control.cpp
src/cost_map/: CMakeLists.txt  package.xml
src/cost_map/src/: get_map.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/src/: get_localization.cpp
src/path_plan/: CMakeLists.txt  package.xml
